<?xml version="1.0"?>
<package format="2">
  <name>bag2csv</name>
  <version>1.0.0</version>
  <description>ROS bag文件转CSV格式工具，支持IMU（加速度/陀螺仪/磁力计）数据导出</description>
  <maintainer email="2634327876@qq.com">Haozhe Wang Neal</maintainer>
  <license>MIT</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- C++依赖 -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- 运行依赖：与构建依赖一一对应 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
    <build_type>catkin</build_type>
  </export>
</package>